<resources>
    <string name="app_name">Catch The Ball 2</string>
    <string name="score_Text">Score : 0</string>
    <string name="start_Text">Catch The Ball ver-2</string>
    <string name="highScore_Text">High Score : 300</string>
    <string name="playButton_Text">PLAY</string>
    <string name="quitButton_Text">QUIT</string>
    <string name="pauseButton_Text">PAUSE</string>
    <string name="continueButton_Text">CONTINUE</string>
    <string name="App_Text">Catch the Ball 2</string>
    <string name="blackBall_Text">-20 point and life decrease</string>
    <string name="orangeBall_Text">+10 point</string>
    <string name="pinkBall_Text">+30 point and life increase</string>
</resources>
