<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="com.example.user.catchtheball2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/PauseButton"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="1dp"
            android:text="@string/pauseButton_Text"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingVertical="14dp"
            android:text="@string/score_Text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/gameFrame"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/box"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/box_right"
            android:visibility="invisible"
            android:layout_gravity="bottom" />

        <ImageView
            android:id="@+id/black"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/black_ball_icon"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/orange"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/orange_ball_icon"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/pink"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/pink_ball_icon"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/startLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_Text"
                android:textSize="24sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/highScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highScore_Text"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="80dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:text="@string/playButton_Text"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:onClick="startGame" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:textStyle="bold"
                android:text="@string/quitButton_Text"
                android:onClick="quitGame" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
