<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.catchtheball2.SplashScreenActivity"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App_Text"
        android:textSize="32sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp">

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/orange_ball_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orangeBall_Text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingLeft="10dp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/pink_ball_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pinkBall_Text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingLeft="10dp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/black_ball_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blackBall_Text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingLeft="10dp" />

        </TableRow>

    </TableLayout>

    <ProgressBar
        android:id="@+id/ProgressBar_Id"
        android:progressBackgroundTint="@color/White"
        android:progressTint="@color/Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

</LinearLayout>
